<resources>
    <string name="app_name">Sample07</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="up">UP</string>
    <string name="down">DOWN</string>
    <string name="activity">Activity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="example_01">Example 01</string>
    <string name="example_02">Example 02</string>
    <string name="example_03">Example 03</string>
    <string name="example_04">Example 04</string>
    <string name="example_05">Example 05</string>
    <string name="example_06">Example 06</string>
    <string name="example_07">Example 07</string>
    <string name="example_08">Example 08</string>
    <string name="example_09">Example 09</string>
    <string name="textView">TextView</string>
    <string name="button">Button</string>
    <string name="text">text</string>
</resources>
