<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/ex01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_01"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_02"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_03"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_04"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_05"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_06"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_07"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_08"
        android:onClick="click"/>
    <Button
        android:id="@+id/ex09"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_09"
        android:onClick="click"/>
</LinearLayout>
</LinearLayout>